# slowpokeapi

./: .dockerignore  .gitignore  AGENTS.md  BUGS.md  CHANGELOG.md  Cargo.toml  DO_NEXT.md  Dockerfile  Dockerfile.debug  LICENSE  PLAN.md  PLAN_CRDT.md  README.md  SCOPE.md  STATUS.md  WHAT_WE_DID.md  clippy.toml  docker-compose.cluster.yml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
LICENSES/: AGPL-3.0.txt  MIT.txt
deploy/grafana/: dashboard.json
deploy/prometheus/: alerts.yml
deploy/terraform/: alb.tf  autoscaling.tf  cloudwatch.tf  ecs.tf  efs.tf  main.tf  outputs.tf  security.tf  variables.tf  versions.tf  vpc.tf
docker/: entrypoint.sh  nginx.conf
docs/: API.md  DEPLOYMENT.md
migrations/: 20240302000000_initial.sql  20240302000001_rates.sql  20240302000002_historical.sql  20240302000003_sync_state.sql  20240303000000_cache.sql  20240303150000_sync_document.sql
specs/: README.md
specs/api/: health.md  metrics.md  openapi.yaml
specs/architecture/: README.md  components.md  sync.md
specs/data/: models.md  storage.md
specs/deployment/: binary.md  container.md  helm.md  terraform.md
specs/implementation/: phases.md
src/: error.rs  lib.rs  main.rs
src/auth/: api_key.rs  mod.rs
src/cache/: memory.rs  metrics.rs  mod.rs  sqlite.rs  tiered.rs
src/config/: mod.rs  settings.rs
src/handlers/: currencies.rs  enriched.rs  health.rs  history.rs  latest.rs  metrics.rs  mod.rs  pair.rs  quota.rs
src/metrics/: definitions.rs
src/models/: currency.rs  error.rs  historical.rs  metadata.rs  mod.rs  rate.rs  validation.rs
src/ratelimit/: mod.rs  token_bucket.rs
src/server/: mod.rs  openapi.rs  router.rs  state.rs
src/storage/: api_keys.rs  mod.rs  sqlite.rs
src/sync/: crdt.rs  discovery.rs  gossip.rs  integration.rs  metrics.rs  mod.rs  peer.rs  reconciliation.rs  service.rs
src/upstream/: circuit_breaker.rs  client.rs  coincap.rs  coingecko.rs  fawaz.rs  frankfurter.rs  manager.rs  metrics.rs  mod.rs
tasks/: README.md
tasks/phase1/: 05-axum-router.md  07-health-endpoints.md
tasks/phase13/: 01-cryptocurrency-support.md
tasks/phase2/: 01-utoipa-deps.md  02-response-models.md  (+5 more)
tests/: auth.rs  cache.rs  crypto.rs  currencies.rs  enriched.rs  history.rs  latest.rs  metrics.rs  models.rs  openapi.rs  pair.rs  ratelimit.rs  sync_integration.rs  upstream.rs
(+67 files in other folders)
