[package]
name = "slowpokeapi"
version = "0.1.0"
edition = "2021"
authors = ["SlowPokeAPI Contributors"]
description = "Currency exchange rate API with distributed sync"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15"
thiserror = "1"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
prometheus = "0.14"
axum-prometheus = "0.7"
once_cell = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
automerge = "0.5"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
bincode = "1"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
